APPS-4338 Fix indexOutOfBoundException in DropDownComboBoxController, extracting MaterialVisibilityController and add some tests.

--- a/web/src/main/resources/scss/dialog-styles.scss
+++ b/web/src/main/resources/scss/dialog-styles.scss
@@ -210,7 +210,7 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
 		.visibilityPanel {
 			.visibility {
 				position: absolute;
-				bottom: 6px;
+				bottom: 12px;
 				width: 131px;
 				left: 76px;
 				top: auto;
